[package]
authors = [ "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>" ]
default-run = "advent_of_code"
edition = "2021"
name = "advent_of_code"
publish = false
version = "0.9.3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = [  ]

[dependencies]
pico-args = "0.5.0"
regex = "1.10.2"
